# PySASF

./: LICENSE  README.md  README_documentation.txt  __init__.py  pyproject.toml
data/: Data_Guapore.xlsx  Data_Guapore_FGP_Py.xlsx  Dataset_Conceiçao_inPo_Py.xlsx  Dataset_Guapore.xlsx  PropSource_Target_CO.py  PropSource_Target_GP.py  Prop_quick_start_Prop_Target_CO.ipynb  Prop_quick_start_Target_GP.ipynb  arvorezinha_database.csv  arvorezinha_database.xlsx  ~$Dataset_Conceiçao_inPo_Py.xlsx
docs/: 01.sh  02.sh  conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pysasf.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pysasf.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  (+2 more)
images/.ipynb_checkpoints/: quick_start-checkpoint.md
notebooks/: quick_plots.ipynb  quick_start.ipynb  run_by_target.ipynb
notebooks/.ipynb_checkpoints/: quick_start-checkpoint.ipynb
notebooks/output/: C9E9L20Y24_L-2-4-8-12-16-20.csv  C9E9L20Y24_Y-2-4-8-12-16-20-24.csv  C9E9L20Y24_combs.txt
output/: C9E9L20Y24_L-2-4-8-12-16-20.csv  C9E9L20Y24_Y-2-4-8-12-16-20-24.csv  C9E9L20Y24_props.txt  clarkeminella.py  cloud_GLS-Clarke3.eps
pysasf/: 4s_01.py  4s_02.py  4s_03.py  PropSourceR3D_Target_CO.py  __init__.py  basindata.py  clarkeminella.py  distances.py  plots.py  quick_start.ipynb  readers.py  solvers.py  stats.py  utils.py
pysasf/.ipynb_checkpoints/: plots-checkpoint.py  quick_start-checkpoint.ipynb
tests/: cm.py
(+9 files in other folders)
